--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <meta name="viewport" content="width=device-width,initial-scale=1" />
  <title>DarkShop — Premium Store</title>
  <script src="https://telegram.org/js/telegram-web-app.js"></script>
- <link rel="stylesheet" href="/css/style.css">
+ <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="container">
@@ -215,10 +215,10 @@
         </div>
     </div>
 
-<script src="/js/config.js"></script>
-<script src="/js/products.js"></script>
-<script src="/js/cart.js"></script>
-<script src="/js/payment.js"></script>
-<script src="/js/app.js"></script>
+<script src="./js/config.js"></script>
+<script src="./js/products.js"></script>
+<script src="./js/cart.js"></script>
+<script src="./js/payment.js"></script>
+<script src="./js/app.js"></script>
 </body>
 </html>
