Ваше сообщение о изменениях

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <div class="currency-grid" id="currencyList"></div>
                 
                 <div style="margin: 20px 0;">
-                    <div class="text-muted" style="margin-bottom: 8px;">Сеть:</div>
+                    <div class="text-muted" style="margin-bottom: 8px;">Network:</div>
                     <div class="network-buttons" id="networkButtons"></div>
                 </div>
                 
